--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     .step { display: none; }
     .step.active { display: block; }
     body { background-color: #171f2a; } /* Dark gray background for top section */
-    .container { max-width: 1200px; margin: 0 auto; padding: 1rem sm:2rem; }
+    .container { max-width: 1200px; margin: 0 auto; padding: 1rem 16rem sm:2rem; } /* Increased side padding */
     /* Ensure video is responsive */
     .video-container {
       position: relative;
@@ -28,15 +28,23 @@
       left: 0;
       width: 100%;
       height: 100%;
+      border: none; /* Ensure no border affects layout */
+      max-width: 560px; /* Limit max width to original size */
+      max-height: 315px; /* Limit max height to original size */
+      margin: 0 auto; /* Center the iframe */
     }
     /* Middle section with white background */
     .middle-section { background-color: #ffffff; padding: 1rem sm:2rem; border-radius: 0.5rem; }
+    /* Benefits grid padding */
+    .benefits-grid { padding-left: 2rem; padding-right: 2rem; }
+    /* Testimonials padding */
+    .testimonial { padding-left: 2rem; padding-right: 2rem; }
     /* Lower section with dark gray background */
     .lower-section { background-color: #171f2a; padding: 1rem sm:2rem; border-radius: 0.5rem; }
   </style>
 </head>
 <body class="text-white">
-  <div class="container mx-auto px-4 py-6 sm:py-8">
+  <div class="container mx-auto px-12 py-6 sm:py-8">
     <!-- Header -->
     <div class="text-center mb-8 sm:mb-12">
       <h1 class="text-2xl sm:text-3xl font-bold text-[#fed777]">Gold Crest Surveyors</h1>
@@ -110,9 +118,9 @@
   <!-- Middle Section with White Background -->
   <div class="middle-section">
     <!-- Benefits Section -->
-    <div class="mt-16 sm:mt-20">
+    <div class="mt-16 sm:mt-20"> <!-- Reduced to show more white space -->
       <h2 class="text-2xl sm:text-3xl font-bold text-[#171f2a] mb-6 sm:mb-8 text-center">Why Choose Gold Crest Surveyors?</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
+      <div class="benefits-grid grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 sm:gap-10"> <!-- Increased gap for padding -->
         <div>
           <h3 class="text-lg sm:text-xl font-semibold mb-2 text-[#171f2a]">Renowned by Thousands</h3>
           <p class="text-gray-600">Over 5,000 satisfied clients across the UK rely on our expert surveying services with confidence.</p>
@@ -132,11 +140,11 @@
     <div class="mt-12 sm:mt-16">
       <h2 class="text-2xl sm:text-3xl font-bold text-[#171f2a] mb-6 sm:mb-8 text-center">What Our Clients Say</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 sm:gap-8">
-        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
+        <div class="testimonial bg-white p-4 sm:p-6 rounded-lg shadow-md">
           <p class="text-gray-600 mb-4">"Gold Crest provided a detailed homebuyer report that saved us from a costly mistake. Highly professional!"</p>
           <p class="font-semibold text-[#171f2a]">– Sarah T., London</p>
         </div>
-        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
+        <div class="testimonial bg-white p-4 sm:p-6 rounded-lg shadow-md">
           <p class="text-gray-600 mb-4">"The valuation process was quick and transparent. I'd recommend Gold Crest to anyone buying a home."</p>
           <p class="font-semibold text-[#171f2a]">– James R., Manchester</p>
         </div>
