--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Gold Crest Surveyors - Compare Survey Options</title>
   <!-- Tailwind CSS CDN for styling -->
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google Maps Places API (replace YOUR_API_KEY with your actual key) -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
   <style>
     /* Custom styles for multi-step form */
     .step { display: none; }
@@ -28,10 +30,10 @@
       left: 0;
       width: 100%;
       height: 100%;
-      border: none; /* Ensure no border affects layout */
-      max-width: 560px; /* Limit max width to original size */
-      max-height: 315px; /* Limit max height to original size */
-      margin: 0 auto; /* Center the iframe */
+      border: none;
+      max-width: 560px;
+      max-height: 315px;
+      margin: 0 auto;
     }
     /* Middle section with white background */
     .middle-section { background-color: #ffffff; padding: 1rem sm:2rem; border-radius: 0.5rem; }
@@ -41,13 +43,19 @@
     .testimonial { padding-left: 2rem; padding-right: 2rem; }
     /* Lower section with dark gray background */
     .lower-section { background-color: #171f2a; padding: 1rem sm:2rem; border-radius: 0.5rem; }
+    /* Autocomplete styling */
+    .pac-target-input { width: 100%; padding: 0.75rem; border: 1px solid #d1d5db; border-radius: 0.375rem; }
+    /* Logo styling */
+    .logo { max-height: 60px; vertical-align: middle; }
   </style>
 </head>
 <body class="text-white">
   <div class="container mx-auto px-12 py-6 sm:py-8">
-    <!-- Header -->
+    <!-- Header with Logo Link -->
     <div class="text-center mb-8 sm:mb-12">
-      <h1 class="text-2xl sm:text-3xl font-bold text-[#fed777]">Gold Crest Surveyors</h1>
+      <a href="https://goldcrestsurveyors.com" target="_blank">
+        <img src="logo.png" alt="Gold Crest Surveyors Logo" class="logo mx-auto">
+      </a>
     </div>
 
     <!-- YouTube Video Section -->
@@ -74,7 +82,7 @@
             <option value="bungalow">Bungalow</option>
           </select>
           <input type="number" name="purchase_price" class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#fed777]" placeholder="Purchase Price (£)" min="0" required>
-          <input type="text" id="address" name="address" class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#fed777]" placeholder="Property Address (London postcodes only)" required>
+          <input type="text" id="address" name="address" class="pac-target-input mb-4 focus:outline-none focus:ring-2 focus:ring-[#fed777]" required>
           <button type="button" class="next-btn w-full bg-[#fed777] text-[#171f2a] p-3 rounded-lg hover:bg-[#e6c45f] transition">Next Step</button>
         </div>
 
@@ -85,15 +93,6 @@
           <input type="text" name="surname" class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#fed777]" placeholder="Surname" required>
           <input type="tel" name="number" class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#fed777]" placeholder="Phone Number" required>
           <input type="email" name="email" class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#fed777]" placeholder="Email Address" required>
-          <div class="mb-4">
-            <label class="block text-sm font-medium mb-2">Preferred Contact Method</label>
-            <div class="flex items-center">
-              <input type="checkbox" name="contact_call" id="contact_call" class="mr-2">
-              <label for="contact_call" class="mr-4">Call Me</label>
-              <input type="checkbox" name="contact_email" id="contact_email" class="mr-2">
-              <label for="contact_email">Email Me</label>
-            </div>
-          </div>
           <button type="button" class="next-btn w-full bg-[#fed777] text-[#171f2a] p-3 rounded-lg hover:bg-[#e6c45f] transition">Next Step</button>
         </div>
 
@@ -102,6 +101,8 @@
           <select name="referral_source" class="w-full p-3 mb-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-[#fed777]" required>
             <option value="" disabled selected>Where did you hear about us?</option>
             <option value="google">Google Search</option>
+            <option value="website">Website</option>
+            <option value="solicitor">Solicitor</option>
             <option value="social_media">Social Media</option>
             <option value="referral">Friend/Referral</option>
             <option value="advert">Advertisement</option>
@@ -118,9 +119,9 @@
   <!-- Middle Section with White Background -->
   <div class="middle-section">
     <!-- Benefits Section -->
-    <div class="mt-16 sm:mt-20"> <!-- Reduced to show more white space -->
+    <div class="mt-16 sm:mt-20">
       <h2 class="text-2xl sm:text-3xl font-bold text-[#171f2a] mb-6 sm:mb-8 text-center">Why Choose Gold Crest Surveyors?</h2>
-      <div class="benefits-grid grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 sm:gap-10"> <!-- Increased gap for padding -->
+      <div class="benefits-grid grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 sm:gap-10">
         <div>
           <h3 class="text-lg sm:text-xl font-semibold mb-2 text-[#171f2a]">Renowned by Thousands</h3>
           <p class="text-gray-600">Over 5,000 satisfied clients across the UK rely on our expert surveying services with confidence.</p>
@@ -168,7 +169,7 @@
     </footer>
   </div>
 
-  <!-- JavaScript for Multi-Step Form -->
+  <!-- JavaScript for Multi-Step Form and Autocomplete -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const steps = document.querySelectorAll('.step');
@@ -186,6 +187,20 @@
       document.getElementById('surveyForm').addEventListener('submit', (e) => {
         e.preventDefault();
         alert('Form submitted!'); // Replace with actual form submission logic
+      });
+
+      // Google Maps Places Autocomplete for London Postcodes
+      const addressInput = document.getElementById('address');
+      const autocomplete = new google.maps.places.Autocomplete(addressInput, {
+        componentRestrictions: { country: 'uk' },
+        types: ['postal_code'], // Restrict to postcodes
+        fields: ['address_components', 'formatted_address']
+      });
+      autocomplete.addListener('place_changed', () => {
+        const place = autocomplete.getPlace();
+        if (place.address_components) {
+          addressInput.value = place.formatted_address;
+        }
       });
     });
   </script>
